# Real-time-physics-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark_output.txt  configure_log.txt
.github/workflows/: ci.yml  deploy.yml
docs/: physics_engine.js  physics_engine.wasm
include/core/: Timer.h  Window.h
include/math/: Mat3.h  Mat4.h  Quat.h  Vec3.h
include/physics/: AABB.h  BVHTree.h  CollisionDetector.h  ContactManifold.h  ImpulseSolver.h  PhysicsWorld.h  RigidBody.h
include/renderer/: Camera.h  DebugRenderer.h  Mesh.h  Shader.h
shaders/: debug.frag  debug.vert
src/: CMakeLists.txt  benchmark.cpp  main.cpp
src/core/: Timer.cpp  Window.cpp
src/physics/: BVHTree.cpp  CollisionDetector.cpp  ImpulseSolver.cpp  PhysicsWorld.cpp  RigidBody.cpp
src/renderer/: Camera.cpp  DebugRenderer.cpp  Mesh.cpp  Shader.cpp
tests/: CMakeLists.txt  test_bvh.cpp  test_collision.cpp  test_math.cpp  test_physics.cpp  test_solver.cpp
web/: CMakeLists.txt  README_WASM.md  WebGLRenderer.cpp  WebGLRenderer.h  index.html  main_wasm.cpp
